// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional_complex_property test_optional_complex_property_not_templated 1`] = `
{
  "json": {
    "property": {
      "value": "https://ya.ru",
    },
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": {},
}
`;

exports[`optional_complex_property test_optional_complex_property_not_templated 2`] = `
[
  [
    [Error: No such template],
  ],
]
`;

exports[`optional_complex_property test_optional_complex_property_with_internal_link 1`] = `
{
  "json": {
    "link": "https://ya.ru",
    "property": {
      "value": "https://ya.ru",
    },
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": {
    "link": "https://ya.ru",
  },
}
`;

exports[`optional_complex_property test_optional_complex_property_with_internal_link_missing_data 1`] = `
{
  "json": {
    "property": {},
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": {},
}
`;

exports[`optional_complex_property test_optional_complex_property_with_internal_link_missing_data 2`] = `[]`;

exports[`optional_complex_property test_optional_complex_property_with_internal_link_override_in_template 1`] = `
{
  "json": {
    "link_override": "https://ya.ru",
    "property": {
      "value": "https://ya.ru",
    },
    "type": "t_0",
  },
  "templateContext": {
    "link_override": "https://ya.ru",
  },
}
`;

exports[`optional_complex_property test_optional_complex_property_with_link 1`] = `
{
  "json": {
    "link": {
      "value": "https://ya.ru",
    },
    "property": {
      "value": "https://ya.ru",
    },
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": {
    "link": {
      "value": "https://ya.ru",
    },
  },
}
`;

exports[`optional_complex_property test_optional_complex_property_with_link_missing_data 1`] = `
{
  "json": {
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": {},
}
`;

exports[`optional_complex_property test_optional_complex_property_with_link_missing_data 2`] = `[]`;

exports[`optional_complex_property test_optional_complex_property_with_override_in_template 1`] = `
{
  "json": {
    "link_override": {
      "value": "https://ya.ru",
    },
    "property": {
      "value": "https://ya.ru",
    },
    "type": "t_0",
  },
  "templateContext": {
    "link_override": {
      "value": "https://ya.ru",
    },
  },
}
`;

exports[`optional_complex_property test_optional_complex_property_without_link 1`] = `
{
  "json": {
    "property": {
      "value": "https://ya.ru",
    },
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": {},
}
`;

exports[`optional_complex_property test_optional_complex_property_without_link_missing_data 1`] = `
{
  "json": {
    "property": {},
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": {},
}
`;

exports[`optional_complex_property test_optional_invalid_complex_property_not_templated 1`] = `
{
  "json": {
    "property": {},
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": {},
}
`;

exports[`optional_complex_property test_optional_invalid_complex_property_not_templated 2`] = `
[
  [
    [Error: No such template],
  ],
]
`;
